--- a/package.json
+++ b/package.json
@@ -75,7 +75,9 @@
     "eslint-plugin-prettier": "3.0.0",
     "eslint-plugin-react": "7.11.1",
     "lint-staged": "7.3.0",
-    "node-sass": "^4.12.0",
+    "sass": "^1.80.4",
+	"markdown-it": "^13.0.1",
+	"sanitize-html": "^2.7.0"
     "prettier": "1.14.3",
     "stylelint": "9.6.0",
     "stylelint-config-recommended": "2.1.0",
