--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "lint-staged": "7.3.0",
     "sass": "^1.80.4",
 	"markdown-it": "^13.0.1",
-	"sanitize-html": "^2.7.0"
+	"sanitize-html": "^2.7.0",
     "prettier": "1.14.3",
     "stylelint": "9.6.0",
     "stylelint-config-recommended": "2.1.0",
