--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-regular-svg-icons": "^5.10.1",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "array-move": "^2.1.0",
     "gh-pages": "^2.0.1",
     "jspdf": "^1.5.3",
@@ -82,6 +81,7 @@
     "stylelint": "9.6.0",
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.5.0"
+    "stylelint-processor-styled-components": "1.5.0",
+    "node-sass": "^4.14.0"
   }
 }
