--- a/package.json
+++ b/package.json
@@ -66,22 +66,21 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-airbnb-base": "13.1.0",
-    "eslint-config-prettier": "3.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-prettier": "3.0.0",
-    "eslint-plugin-react": "7.11.1",
-    "lint-staged": "7.3.0",
-    "sass": "^1.80.4",
-	"markdown-it": "^13.0.1",
-	"sanitize-html": "^2.7.0",
-    "prettier": "1.14.3",
-    "stylelint": "9.6.0",
-    "stylelint-config-recommended": "2.1.0",
-    "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.5.0",
-    "node-sass": "^4.14.0"
-  }
+  "eslint-config-airbnb": "17.1.0",
+  "eslint-config-airbnb-base": "13.1.0",
+  "eslint-config-prettier": "3.1.0",
+  "eslint-plugin-import": "2.14.0",
+  "eslint-plugin-jsx-a11y": "6.1.2",
+  "eslint-plugin-prettier": "3.0.0",
+  "eslint-plugin-react": "7.11.1",
+  "lint-staged": "7.3.0",
+  "sass": "^1.80.4",
+  "markdown-it": "^13.0.1",
+  "sanitize-html": "^2.7.0",
+  "prettier": "1.14.3",
+  "stylelint": "9.6.0",
+  "stylelint-config-recommended": "2.1.0",
+  "stylelint-config-styled-components": "0.1.1",
+  "stylelint-processor-styled-components": "1.5.0"
+}
 }
