--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "react-simplemde-editor": "^4.0.0",
     "styled-components": "^4.1.3"
   },
- "devDependencies": {
+  "devDependencies": {
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "3.1.0",
@@ -81,6 +81,7 @@
     "stylelint": "9.6.0",
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
-    "stylelint-processor-styled-components": "1.5.0"
-}
+    "stylelint-processor-styled-components": "1.5.0",
+    "node-sass": "^4.14.1"
+  }
 }
