--- a/package.json
+++ b/package.json
@@ -82,6 +82,6 @@
     "stylelint-config-recommended": "2.1.0",
     "stylelint-config-styled-components": "0.1.1",
     "stylelint-processor-styled-components": "1.5.0",
-    "node-sass": "^4.14.1"
+    "sass": "^1.80.4"
   }
 }
