--- a/package.json
+++ b/package.json
@@ -45,11 +45,11 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-regular-svg-icons": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
+"dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.21",
+    "@fortawesome/free-regular-svg-icons": "^5.10.1",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "array-move": "^2.1.0",
     "gh-pages": "^2.0.1",
     "jspdf": "^1.5.3",
@@ -64,7 +64,9 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "react-simplemde-editor": "^4.0.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "js-yaml": "^4.1.0",
+    "gray-matter": "^4.0.3"
   },
   "devDependencies": {
     "eslint-config-airbnb": "17.1.0",
